<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="35dp"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/mainActivity_cost_of_service"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/mainActivity_cost_of_service"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainActivity_service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainActivity_how_was_the_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainActivity_cost_of_service" />

    <RadioGroup
        android:id="@+id/mainActivity_tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/mainActivity_option_twenty_percent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainActivity_service_question">

        <RadioButton
            android:id="@+id/mainActivity_option_twenty_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainActivity_amazing_service" />

        <RadioButton
            android:id="@+id/mainActivity_option_eighteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainActivity_good_service" />

        <RadioButton
            android:id="@+id/mainActivity_option_fifteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainActivity_ok_service" />
    </RadioGroup>

    <Switch
        android:id="@+id/mainActivity_round_up_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/mainActivity_round_up_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainActivity_tip_options" />

    <Button
        android:id="@+id/mainActivity_calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mainActivity_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainActivity_round_up_switch" />

    <TextView
        android:id="@+id/mainActivity_tip_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainActivity_tip_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainActivity_calculate_button" />
</androidx.constraintlayout.widget.ConstraintLayout>